fixed left-aligning

--- a/lights/static/lights/style.css
+++ b/lights/static/lights/style.css
@@ -6,7 +6,7 @@ html {
 body {
     display: flex;
     flex-flow: column wrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
 
     margin: 0;
